# algorithms

./: .commitlintrc.js  .eslintignore  .eslintrc.js  .gitignore  CHANGELOG.md  NOTE.md  README.md  babel.config.js  jest.config.cjs  jest.config.js  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: blank.yml
coverage/: clover.xml  coverage-final.json  lcov.info
coverage/lcov-report/: add.js.html  add.ts.html  index.html
coverage/lcov-report/math/: add.ts.html  index.html
coverage/lcov-report/snowflake/: index.html  snowflake.ts.html
coverage/lcov-report/sort/: check.ts.html  index.html  sort_data.ts.html
go/: go.mod
go/snowflake/: snowflake.go
golang/snowflake/: snowflake_test.go
rust/: Cargo.toml
rust/snowflake/: Cargo.toml  README.md
rust/snowflake/src/: lib.rs
rust/tests/: snowflake.rs
src/: index.ts
src/coordinate/CoordinateRotate/: CoordinateRotate.ts
src/limiter/: leaky-bucket.ts
src/math/: add.test.ts  add.ts
src/search/: binarySearch.ts
src/snowflake/: snowflake.mjs  snowflake.test.ts  snowflake.ts
src/sort/: bubbing.test.ts  bubbling_sort.ts  check.test.ts  heap.test.ts  insert.test.ts  insert_sort.ts  merge.test.ts  merge.ts  quick.test.ts  select.test.ts  select_sort.ts  shell.test.ts  shell_sort.ts  sort_data.ts
src/test-lib/: check.ts  sort_data.ts
src/testing/: check.ts
test/match/: add.test.ts
test/sort/: bubbingSort.test.ts  heapSort.test.ts  insertSort.test.ts  mergeSort.test.ts  quickSort.test.ts  selectSort.test.ts  shellSort.test.ts
test/testing/: check.test.ts
(+53 files in other folders)
