[package]
name = "snowflake"
version = "0.1.0"
authors = ["胡坤 <mrhukun@gmail.com>"]
edition = "2018"
description = "雪花算法 编译到 WebAssembly"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#chrono = "0.4"
#time = "0.1.42"
wasm-bindgen = "0.2.55"
wasm-bindgen-test = "0.2"
